Complete Product CRUD with Swagger and fix bugs
- Implement full CRUD endpoints for Product entity (create, read, update, delete)
- Add proper Swagger documentation for all Product endpoints
- Configure JWT security in Swagger for protected endpoints
- Fix bugs and inconsistencies in controller, service, and configuration